<?xml version="1.0"?>
<package format="2">
  <name>visual_odometry</name>
  <version>0.0.0</version>
  <description>The visual_odometry package</description>

   <maintainer email="pknaperek@gmail.com">Patrik Knaperek</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  
</package>
